# noxa

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  main.py  prd.md  pyproject.toml
.github/scripts/: next_version.py
.github/workflows/: ci.yml  docker-build-reusable.yml  docker.yml  release.yml
docker/: Dockerfile  entrypoint.sh
scripts/: benchmark_answer.py  noxa.sh  smoke_test.py
src/noxa/: __init__.py  answer_contract.py  answerer.py  app.py  cache.py  chunker.py  confidence.py  config.py  crawler.py  debug_dump.py  fetcher.py  llm_perf.py  logging_config.py  logging_middleware.py  ml_deps.py  model_bootstrap.py  model_stats.py  model_timing.py  openapi_metadata.py  packer.py  pipeline.py  proxies.py  request_context.py  schemas.py  security.py  text_clean.py
src/noxa/retrieval/: bm25.py  embed.py  merge.py  rerank.py
src/noxa/runtime/: __init__.py  answer_llama.py  answer_torch.py  artifacts.py  detect.py  embed_llama.py  embed_onnx.py  embed_torch.py  fastembed_resolve.py  hf_resolve.py  interfaces.py  llama_common.py  manifest.py  registry.py  rerank_llama.py  rerank_onnx.py  rerank_torch.py
src/noxa/search/: base.py  ddgs.py
tests/: test_runtime.py  test_unit.py
