[project]
name = "noxa"
version = "0.1.0"
description = "Self-hosted web search and query answering for AI agents — an open-source Exa alternative"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "Radek Baczynski" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "ddgs>=9.0",
    "crawl4ai>=0.7.0",
    "rank-bm25>=0.2",
    "sqlite-vec>=0.1.6",
    "tiktoken>=0.8",
    "httpx>=0.28",
]

[project.optional-dependencies]
ml = [
    "llama-cpp-python>=0.3.0",
    "huggingface-hub>=0.26",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
noxa = "noxa.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/noxa"]
